Atualizar o FireSystemChecklist.html

--- a/src/screens/FireSystemChecklist.html
+++ b/src/screens/FireSystemChecklist.html
@@ -2,101 +2,148 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Laudo - Sistema de Incêndio | Brivax</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>🔥 Laudo de Sistema de Incêndio - Brivax</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f5f5f5;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
       margin: 0;
       padding: 0;
-      color: #333;
     }
-
     header {
-      background: #ff6600;
+      background-color: #ff7b00;
       color: white;
       text-align: center;
-      padding: 12px;
+      padding: 15px 0;
+      font-weight: bold;
       font-size: 20px;
-      font-weight: bold;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
     }
-
     .container {
-      padding: 20px;
-      max-width: 800px;
-      margin: auto;
-      background: white;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
-      margin-top: 20px;
-      margin-bottom: 60px;
+      padding: 15px;
+      max-width: 900px;
+      margin: 0 auto;
     }
-
-    h2 {
-      color: #ff6600;
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
     .item {
-      margin-bottom: 15px;
-      padding-bottom: 10px;
-      border-bottom: 1px solid #ddd;
+      background-color: #cfcfcf;
+      border-radius: 10px;
+      padding: 15px;
+      margin-bottom: 12px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
-
-    .item label {
+    .item h3 {
+      margin-top: 0;
+      color: #ff7b00;
+      font-size: 17px;
+    }
+    .uploads input {
       display: block;
-      font-weight: bold;
-      margin-bottom: 6px;
+      margin: 5px 0;
     }
-
+    label {
+      font-weight: bold;
+    }
     .options {
       display: flex;
       gap: 10px;
+      margin: 8px 0;
     }
-
     .options button {
-      flex: 1;
-      padding: 8px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      background: #f0f0f0;
+      background-color: #ddd;
+      border: none;
+      padding: 6px 12px;
+      border-radius: 5px;
       cursor: pointer;
       transition: all 0.2s;
     }
-
     .options button.selected {
-      background: #ff6600;
+      background-color: #ff7b00;
+      color: #fff;
+    }
+    textarea {
+      width: 100%;
+      border-radius: 5px;
+      border: 1px solid #aaa;
+      padding: 6px;
+      resize: none;
+      min-height: 40px;
+    }
+    .signature-btn {
+      background-color: #ff7b00;
       color: white;
-      border-color: #ff6600;
+      border: none;
+      padding: 10px;
+      width: 100%;
+      font-size: 16px;
+      border-radius: 6px;
+      margin-top: 10px;
+      cursor: pointer;
     }
-
-    input[type="file"] {
-      display: block;
-      margin-top: 8px;
+    .signature-modal {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.7);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
     }
-
+    .signature-box {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.4);
+      width: 95%;
+      max-width: 400px;
+    }
+    canvas {
+      width: 100%;
+      height: 200px;
+      border: 2px solid #ff7b00;
+      border-radius: 6px;
+    }
+    .footer {
+      text-align: center;
+      padding: 20px;
+    }
+    .footer input {
+      margin: 6px 0;
+      padding: 6px;
+      width: 90%;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    .generate {
+      background-color: #ff7b00;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      font-size: 18px;
+      border-radius: 8px;
+      cursor: pointer;
+    }
     .preview {
       display: flex;
       flex-wrap: wrap;
       gap: 8px;
       margin-top: 10px;
     }
-
     .preview div {
       position: relative;
-      width: 130px;
-      height: 130px;
+      width: 140px;
+      height: 140px;
     }
-
     .preview img {
       width: 100%;
       height: 100%;
       object-fit: cover;
       border-radius: 6px;
     }
-
     .preview button {
       position: absolute;
       top: 3px;
@@ -109,92 +156,50 @@
       height: 22px;
       cursor: pointer;
     }
-
-    .generate {
-      display: block;
-      width: 100%;
-      background: #ff6600;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      padding: 12px;
-      font-size: 16px;
-      cursor: pointer;
-      margin-top: 20px;
-    }
-
-    .generate:hover {
-      background: #e65c00;
-    }
-
-    .signature-btn {
-      background: #ff6600;
-      color: #fff;
-      padding: 10px;
-      border: none;
-      border-radius: 6px;
-      width: 100%;
-      margin-top: 10px;
-      cursor: pointer;
-    }
-
-    .signature-btn:hover {
-      background: #e65c00;
-    }
-
-    /* Modal Assinatura */
-    .signature-modal {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.5);
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 9999;
-    }
-
-    .signature-box {
-      background: #fff;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.3);
-      width: 95%;
-      max-width: 400px;
-    }
-
-    canvas {
-      border: 2px solid #ff7b00;
-      border-radius: 6px;
-      width: 100%;
-      height: 220px;
-      touch-action: none;
-    }
   </style>
 </head>
 <body>
-  <header>Sistema de Incêndio - Brivax</header>
+  <header>🔥 Laudo de Sistema de Incêndio - Brivax</header>
 
-  <div class="container">
-    <h2>Checklist do Sistema de Incêndio</h2>
+  <div class="container" id="checklist">
+    <div class="item"><h3>0. Foto da Fachada da Loja</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
+    <div class="item"><h3>1. Foto geral da cozinha</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
+    <div class="item"><h3>2. Foto da coifa</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
+    <div class="item"><h3>3. Foto dos termostatos instalados na coifa</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
+    <div class="item"><h3>4. Foto dos bicos difusores instalados na coifa</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
+    <div class="item"><h3>5. Foto dos cilindros de saponificante</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
+    <div class="item"><h3>6. Foto do manômetro do saponificante</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
+    <div class="item"><h3>7. Foto da solenoide conectada ao saponificante</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
+    <div class="item"><h3>8. Foto do Dumper corta-fogo</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
+    <div class="item"><h3>9. Foto dos termostatos reguláveis</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
+    <div class="item"><h3>10. Foto do cilindro de CO₂</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
+    <div class="item"><h3>11. Foto da solenoide de CO₂ conectada</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
+    <div class="item"><h3>12. Tipo de gás da loja</h3><div class="options"><button>GLP</button><button>NATURAL</button></div></div>
+    <div class="item"><h3>13. Foto dos detectores de gás</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
+    <div class="item"><h3>14. Foto da solenoide do gás conectada</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
+    <div class="item"><h3>15. Foto da comunicação da central do shopping</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
+    <div class="item"><h3>16. Foto do quadro elétrico com disjuntor disponível</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
+    <div class="item"><h3>17. Foto do quadro de exaustão com contato seco N/F</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
+    <div class="item"><h3>18. Foto da central aberta com conexões feitas</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
+    <div class="item"><h3>19. Foto da central fechada e lacrada</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
+    <div class="item"><h3>20. Treinamento realizado?</h3><div class="options"><button>Sim</button><button>Não</button></div></div>
+    <div class="item"><h3>21. Pendências</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
+    <div class="item"><h3>22. Observações do Técnico</h3><textarea placeholder="Observações gerais do técnico"></textarea></div>
+  </div>
 
-    <!-- ✅ 23 itens -->
-    <div id="checklist"></div>
-
+  <div class="footer">
     <button class="signature-btn" onclick="openSignature('tecnico')">Assinatura do Técnico</button>
     <button class="signature-btn" onclick="openSignature('cliente')">Assinatura do Cliente</button>
     <button class="signature-btn" onclick="openSignature('treinamento')">Assinatura do Treinamento</button>
-
-    <button class="generate" onclick="gerarLaudoFire()">Baixar e Salvar Laudo</button>
+    <button class="generate" onclick="gerarPDFFire()">Baixar Laudo</button>
   </div>
 
-  <!-- Modal Assinatura -->
   <div class="signature-modal" id="signatureModal">
     <div class="signature-box">
       <canvas id="signaturePad"></canvas>
-      <div style="text-align:center; margin-top:10px;">
+      <div style="text-align:center; margin-top:8px;">
         <button onclick="clearSignature()">Apagar</button>
-        <button onclick="saveSignature()" style="background:#ff7b00;color:white;border:none;border-radius:6px;padding:6px 12px;">Salvar</button>
+        <button onclick="saveSignature()">Salvar</button>
         <button onclick="closeSignature()">Fechar</button>
       </div>
     </div>
@@ -202,127 +207,40 @@
 
   <script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
   <script src="../js/pdf-template.js"></script>
-
   <script>
-    const checklistContainer = document.getElementById('checklist');
-    const itens = [
-      "Central de alarme instalada e energizada",
-      "Detectores corretamente posicionados",
-      "Acionadores manuais funcionando",
-      "Sirene audível em todos os setores",
-      "Módulos de comando instalados",
-      "Fonte de alimentação testada",
-      "Bateria em funcionamento",
-      "Tubulação aparente fixada corretamente",
-      "Identificação visual de pontos (etiquetas)",
-      "Painel sem avarias ou sujeira",
-      "Botoeiras com tampa de proteção",
-      "Detector de fumaça limpo e fixado",
-      "Detector de temperatura revisado",
-      "Acionador testado com chave de ensaio",
-      "Sirene testada e audível",
-      "Retardo do sistema configurado corretamente",
-      "Setorização conforme projeto",
-      "Sinalização visual instalada",
-      "Sistema de alarme e iluminação de emergência testado",
-      "Documentação técnica anexada",
-      "Fotos de instalação registradas",
-      "Treinamento realizado e registrado",
-      "Sistema finalizado e entregue"
-    ];
-
-    itens.forEach((item, i) => {
-      const div = document.createElement('div');
-      div.classList.add('item');
-      div.innerHTML = `
-        <label>${i + 1}. ${item}</label>
-        <div class="options">
-          <button>Sim</button>
-          <button>Não</button>
-          <button>Teste</button>
-          <button>Funcionando</button>
-        </div>
-        <input type="file" accept="image/*" multiple onchange="previewImages(this)">
-        <div class="preview"></div>
-      `;
-      checklistContainer.appendChild(div);
-    });
-
-    document.querySelectorAll('.options button').forEach(btn => {
-      btn.addEventListener('click', () => {
-        const group = btn.parentNode.querySelectorAll('button');
-        group.forEach(b => b.classList.remove('selected'));
-        btn.classList.add('selected');
-      });
-    });
-
     function previewImages(input) {
-      const previewBox = input.parentNode.querySelector('.preview');
-      previewBox.innerHTML = '';
+      const preview = input.parentNode.querySelector(".preview");
+      preview.innerHTML = "";
       Array.from(input.files).forEach(file => {
         const reader = new FileReader();
         reader.onload = e => {
-          const imgBox = document.createElement('div');
-          imgBox.innerHTML = `
-            <img src="${e.target.result}">
-            <button onclick="this.parentNode.remove()">×</button>
-          `;
-          previewBox.appendChild(imgBox);
+          const div = document.createElement("div");
+          div.innerHTML = `<img src="${e.target.result}"><button onclick="this.parentNode.remove()">×</button>`;
+          preview.appendChild(div);
         };
         reader.readAsDataURL(file);
       });
     }
 
-    // Assinaturas individuais fixas
-    const modal = document.getElementById('signatureModal');
-    const canvas = document.getElementById('signaturePad');
-    const ctx = canvas.getContext('2d');
-    let drawing = false, activeField = '';
+    // Assinatura fixa
+    const modal = document.getElementById("signatureModal");
+    const canvas = document.getElementById("signaturePad");
+    const ctx = canvas.getContext("2d");
+    let drawing = false, activeField = "";
 
-    function disableScroll() { document.body.style.overflow = 'hidden'; }
-    function enableScroll() { document.body.style.overflow = ''; }
+    function disableScroll() { document.body.style.overflow = "hidden"; }
+    function enableScroll() { document.body.style.overflow = ""; }
+    canvas.addEventListener("mousedown", e => { drawing = true; ctx.beginPath(); ctx.moveTo(e.offsetX, e.offsetY); disableScroll(); });
+    canvas.addEventListener("mousemove", e => { if (!drawing) return; ctx.lineTo(e.offsetX, e.offsetY); ctx.stroke(); });
+    canvas.addEventListener("mouseup", () => { drawing = false; enableScroll(); });
+    canvas.addEventListener("touchstart", e => { e.preventDefault(); const rect = canvas.getBoundingClientRect(); const touch = e.touches[0]; ctx.beginPath(); ctx.moveTo(touch.clientX - rect.left, touch.clientY - rect.top); drawing = true; disableScroll(); });
+    canvas.addEventListener("touchmove", e => { if (!drawing) return; e.preventDefault(); const rect = canvas.getBoundingClientRect(); const touch = e.touches[0]; ctx.lineTo(touch.clientX - rect.left, touch.clientY - rect.top); ctx.stroke(); });
+    canvas.addEventListener("touchend", () => { drawing = false; enableScroll(); });
 
-    canvas.addEventListener('mousedown', e => { drawing = true; ctx.beginPath(); ctx.moveTo(e.offsetX, e.offsetY); disableScroll(); });
-    canvas.addEventListener('mousemove', e => { if (!drawing) return; ctx.lineTo(e.offsetX, e.offsetY); ctx.stroke(); });
-    canvas.addEventListener('mouseup', () => { drawing = false; enableScroll(); });
-
-    canvas.addEventListener('touchstart', e => {
-      e.preventDefault(); const rect = canvas.getBoundingClientRect();
-      const touch = e.touches[0];
-      ctx.beginPath(); ctx.moveTo(touch.clientX - rect.left, touch.clientY - rect.top);
-      drawing = true; disableScroll();
-    });
-    canvas.addEventListener('touchmove', e => {
-      if (!drawing) return;
-      e.preventDefault();
-      const rect = canvas.getBoundingClientRect();
-      const touch = e.touches[0];
-      ctx.lineTo(touch.clientX - rect.left, touch.clientY - rect.top);
-      ctx.stroke();
-    });
-    canvas.addEventListener('touchend', () => { drawing = false; enableScroll(); });
-
-    function openSignature(field) {
-      activeField = field;
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      modal.style.display = 'flex';
-    }
-
+    function openSignature(field) { activeField = field; ctx.clearRect(0, 0, canvas.width, canvas.height); modal.style.display = "flex"; }
     function clearSignature() { ctx.clearRect(0, 0, canvas.width, canvas.height); }
-    function closeSignature() { modal.style.display = 'none'; enableScroll(); }
-    function saveSignature() {
-      const data = canvas.toDataURL("image/png");
-      localStorage.setItem(`assinatura_${activeField}`, data);
-      modal.style.display = 'none';
-      enableScroll();
-      alert(`✅ Assinatura de ${activeField} salva!`);
-    }
-
-    // Botão PDF
-    function gerarLaudoFire() {
-      alert("✅ Gerando laudo em PDF...");
-      gerarPDFFire(); // Função definida no pdf-template.js
-    }
+    function closeSignature() { modal.style.display = "none"; enableScroll(); }
+    function saveSignature() { localStorage.setItem(`assinatura_${activeField}`, canvas.toDataURL("image/png")); modal.style.display = "none"; enableScroll(); alert(`✅ Assinatura de ${activeField} salva!`); }
   </script>
 </body>
 </html>
